# podcast-suggester

./: readme.md
api/: .gitignore  package.json  readme.md
api/src/: server.ts
docs/: planning.excalidraw
loader/: go.mod  main.go  readme.md
loader/cmd/loader/: commands.go  loader.go
loader/internal/: episode.go  feed.go
rss-parser/: go.mod  main.go
rss-parser/internal/: episode.go  feed.go  rss.go
transcriber/: Dockerfile  Pipfile  cli.py  pyproject.toml  readme.md
transcriber/modules/: converter.py  transcriber.py
transcriber/preprocessor/: cli.py
transcriber/preprocessor/modules/: prepare.py
