[project]
name = "transcriber"
version = "0.1.0"
description = ""
authors = [
    {name = "kyl0b1te"}
]
readme = "README.md"
requires-python = "3.13.3"
dependencies = [
    "transformers (>=4.49.0,<5.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "audioop-lts (>=0.2.1,<0.3.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
